Update Configurations “config_toml”

--- a/exampleSite/config/_default/config.toml
+++ b/exampleSite/config/_default/config.toml
@@ -3,8 +3,8 @@ enableRobotsTXT = true
 disqusShortname = ""
 languageCode = "en-us"
 theme = "theme"
-title = "Thriftshop Site"
-baseURL = "http://localhost"
+title = "The Juan Shop"
+baseURL = "https://thejuan.shop"
 googleAnalytics = ""
 paginate = 9
 summaryLength = "10"
